--- a/style.css
+++ b/style.css
@@ -89,6 +89,6 @@ td {
     color: hsl(332, 51%, 32%);
     padding: 0.35rem;
     font-weight: 600;
-    border-radius: 5px;;
+    border-radius: 5px;
 }
 
