--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ hr {
 }
 main {
     background-color: hsl(0, 0%, 100%);
-    padding: 3rem 3rem;
+    padding: 3rem;
     border-radius: 15px;
     min-width: 300px;
     max-width: 700px;
